--- a/WebApplication4/WebApplication4.csproj
+++ b/WebApplication4/WebApplication4.csproj
@@ -130,13 +130,24 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MembersController.cs" />
     <Compile Include="Controllers\RegistersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DTOs\MemberDTO.cs" />
+    <Compile Include="Models\DTOs\RegisterDTO.cs" />
     <Compile Include="Models\EFModels\Member.cs" />
     <Compile Include="Models\EFModels\Model1.cs" />
     <Compile Include="Models\EFModels\Register.cs" />
+    <Compile Include="Models\Repository\MemberRepository.cs" />
+    <Compile Include="Models\Service\IMemberRepository.cs" />
+    <Compile Include="Models\Service\IRegisterRepository.cs" />
+    <Compile Include="Models\Repository\RegisterRepository.cs" />
+    <Compile Include="Models\Service\MemberService.cs" />
+    <Compile Include="Models\Service\RegisterServices.cs" />
+    <Compile Include="Models\VM\MemberCreateVM.cs" />
+    <Compile Include="Models\VM\MemberEditVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -178,6 +189,8 @@
     <Content Include="Views\Registers\Create.cshtml" />
     <Content Include="Views\Registers\Details.cshtml" />
     <Content Include="Views\Registers\Index.cshtml" />
+    <Content Include="Views\Members\Create.cshtml" />
+    <Content Include="Views\Members\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
